<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.post_story.AddStoryFragment">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_screen"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_screen"
        app:layout_constraintWidth_percent=".06"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_screen"
        style="@style/TextBold22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/post_story"
        app:layout_constraintStart_toEndOf="@id/img_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_location"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".08"
        app:layout_constraintDimensionRatio="1"
        app:lottie_fileName="animation-location.json"
        app:lottie_loop="true"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_post"
        style="@style/TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_screen"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/img_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/img_story_placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/card_img"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/card_img"
        app:layout_constraintStart_toStartOf="@id/card_img"
        app:layout_constraintTop_toTopOf="@id/card_img"
        app:layout_constraintWidth_percent=".4"
        app:srcCompat="@drawable/ic_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/btn_camera"
        style="@style/TextSemiBold16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="@id/card_img"
        app:layout_constraintTop_toBottomOf="@id/card_img" />

    <TextView
        android:id="@+id/btn_gallery"
        style="@style/TextSemiBold16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/card_img"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@id/card_img" />

    <EditText
        android:id="@+id/et_caption"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rounded_outlined"
        android:fontFamily="@font/sofia_pro_regular"
        android:gravity="top"
        android:hint="@string/hint_add_caption"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn_add_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/btn_add_location"
        style="@style/TextSemiBold16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_location"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/btn_post"
        app:layout_constraintEnd_toEndOf="@id/btn_post"
        app:layout_constraintStart_toStartOf="@id/btn_post" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>